# Lumine

./: .gitignore  README.md  eslint.config.js  go.mod  index.html  main.go  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  wails.json
.github/workflows/: build-windows.yml  ci.yml  e2e.yml
.spec/: lumine_ai_spec.md
app/: app.go
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  ImageGrid.tsx  index.css  wailsjs.go.d.ts
frontend/src/api/: client.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_library_settings.sql  003_color_labels_and_filters.sql  004_performance_indexes.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: asset_service.rs  library_service.rs  library_settings_service.rs  mod.rs  move_service.rs  post_service.rs  services.rs  tag_service.rs
src-tauri/src/commands/: asset.rs  folder.rs  folder_watcher_cmd.rs  job.rs  library.rs  library_settings.rs  mod.rs  post.rs  tag.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/domain/: entities.rs  mod.rs  value_objects.rs
src-tauri/src/infrastructure/: file_scanner.rs  folder_watcher.rs  mod.rs  quick_scanner.rs  thumbnail.rs
src-tauri/src/jobs/: background.rs  mod.rs
src/app/layout/: MainLayout.tsx  SearchInput.tsx  Sidebar.tsx  Toolbar.tsx
src/entities/: types.ts
src/styles/: tokens.css  variants.css
src/test/: SearchInput.test.tsx  useAppStore.test.ts
tests/e2e/: app.spec.ts
(+18 files in other folders)
