[package]
name = "lumine"
version = "0.1.0"
description = "Lumine - Windows Image Management App"
authors = ["you"]
edition = "2021"

[lib]
name = "lumine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
notify = "6"
image = "0.25"
blake3 = "1"
anyhow = "1"
thiserror = "1"
chrono = "0.4"

